resul tables reduced and text below the second table added

--- a/newtonRapson.html
+++ b/newtonRapson.html
@@ -28,6 +28,8 @@
                 </tr>
             </tbody>
         </table>
+        <div class="iterations">
+        </div>
     </div>
     <br>
     <div class="trapecio-table-container table">
@@ -43,7 +45,7 @@
             <tbody></tbody>
         </table>
     </div>
-    <img src="./calcular.gif">
+    <img src="https://media.tenor.com/X-Xo9b3JOiUAAAAS/el-conocimiento-es-poder-matematicas.gif">
 </body>
 <script src="./newtonRapson.js"></script>
 </html>
